# md_task

./: README.md  manage.py  pyproject.toml  requirements.txt
infra/: Dockerfile  docker-compose.yml  example.env  start.sh
src/core/: models.py  settings.py  urls.py
src/patients/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/patients/migrations/: 0001_initial.py
src/task_2/: apps.py  serializers.py  service.py  urls.py  views.py
tests/integration/: conftest.py  test_integrations.py
