[tool.poetry]
name = "md-task"
version = "0.1.0"
description = ""
authors = ["noonacedia <ruyearn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
pytest = "^8.3.4"
coverage = "^7.6.10"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.4"}
ruff = "^0.9.3"
djangorestframework-simplejwt = "^5.4.0"
msgspec = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
